--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.3.6",
     "babel-loader": "^9.1.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.1",
