--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^9.1.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json-loader": "^0.5.7",
     "morgan": "^1.10.0",
