--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "axios": "^1.3.6",
     "babel-loader": "^9.1.0",
     "babel-preset-env": "^1.7.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json-loader": "^0.5.7",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "style-loader": "^3.3.1",
+    "util": "^0.12.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   }
