--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 PORT=5000
 
-DB_CONNECTION=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=inf_soft
 DB_USERNAME=
 DB_PASSWORD=
