--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.4.3",
     "style-loader": "^3.3.1",
     "util": "^0.12.5",
+    "validator": "^13.9.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   }
