--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ PORT=5000
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=inf_soft
+DB_DATABASE=ing_soft
 DB_USERNAME=
 DB_PASSWORD=
+
+JWT_PRIVATE_KEY=jwtRS256.key
+JWT_PUBLIC_KEY=jwtRS256.key.pub
