--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "style-loader": "^3.3.1",
+    "sweetalert2": "^11.7.3",
     "util": "^0.12.5",
     "validator": "^13.9.0",
     "webpack": "^5.75.0",
