--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/server.js",
     "webpack-dev": "webpack --mode development --watch",
     "webpack-dev-without-backend": "webpack-dev-server --mode development --open",
-    "webpack-prod": "webpack --mode production"
+    "webpack-prod": "webpack --mode production",
+    "socket-start": "node src/socket.io/chat.js"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,9 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "axios": "^1.3.6",
-    "babel-loader": "^9.1.0",
-    "babel-preset-env": "^1.7.0",
-    "bcrypt": "^5.1.0",
+    "babel-loader": "^9.1.2",
+    "babel-preset-env": "^1.4.0",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
@@ -29,10 +30,12 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^1.14.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "style-loader": "^3.3.1",
     "sweetalert2": "^11.4.8",
     "util": "^0.12.5",
